Test for M4. Tile size issue exists.

--- a/examples/clock_widget/manifest.json
+++ b/examples/clock_widget/manifest.json
@@ -2,17 +2,18 @@
   "plugin_id": "clock_widget",
   "name": "Clock",
   "version": "1.0.0",
-  "description": "Display current time and date",
+  "description": "A digital clock widget with customizable display options",
   "author": "WidgetBoard Team",
-  "module_path": "examples.clock_widget",
+  "module_path": "examples.clock_widget.clock_plugin",
   "class_name": "ClockPlugin",
-  "schema_path": "../../schema/clock_widget_settings.json",
-  "size_constraints": {
-    "min_width": 2,
-    "min_height": 1,
-    "max_width": 4,
-    "max_height": 3,
-    "default_width": 2,
-    "default_height": 2
-  }
+  "execution_mode": "out_of_process",
+  "worker_script": "examples/clock_widget/worker.py",
+  "schema_path": "schema/clock_widget_settings.json",
+  "icon_path": null,
+  "min_width": 2,
+  "min_height": 1,
+  "max_width": 4,
+  "max_height": 2,
+  "default_width": 2,
+  "default_height": 1
 }
